@@ -1,0 +1,5 @@
+import FWCore.ParameterSet.Config as cms
+
+ISpyPATJet = cms.EDAnalyzer('ISpyPATJet',
+                            iSpyPATJetTag = cms.InputTag('cleanLayer1Jets')
+                           )
